--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Catch Me</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
@@ -9,6 +10,6 @@
       <div id="box"><span>Catch me</span></div>
     </div>
 
-    <script src="src/index.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
